
New Features:

- Regenerate map shortcut (ALT + G) [BULL]
- MapFinder from HOF Mod: Press ALT + CTRL + G to start/stop [BULL]
- Advanced Scoreboard
	Refuses to Talk (F) [BULL]
	Number of Cities (Q)
- Production Decay [BULL]
	A yellow ! means an item in the build queue will start to decay after 5 turns of non-production
	A red !! means an item will decay this turn if not produced
	Hover for units/buildings shows actual decay amount and turns until it happens 
- Info Screen (F9)
	New expanded Wonders tab by DanF5771
		Shows constructed items (all known rivals)
		Shows items being built (must have enough EPs for City Visibility)
		Zoom to City button
	Remembers the selected tab like other screens
- BUG Religious Advisor (F7)

Improvements:

- BUG, BULL and Unofficial Patch versions are displayed when hovering over your flag [BULL]
- Min/Max Commerce Rate buttons have more accurate hover text [BULL]
- City Screen
	Added hover details for food rate [BULL]
- Foreign Advisor
	ACTIVE: Added number of turns until you can cancel each deal
	INFO: Hover details for trade with each rival [BULL]
	RESOURCES: Hovers show the reason an AI won't trade [BULL]
	TECHS: Hovers show the reason an AI won't trade [BULL]
- Finance Advisor
	Hover details for trade commerce and gold from specialists [BULL]
- Graphs (both BUG and Vanilla) now include a 'log scale' option
- Autolog
	Amount of gold from pillages
	Retreat and withdrawal [BULL]
	Collateral and flanking damage [BULL]
	Upgraded units [BULL]
- Strategy Overlay
	Configurable color palette (not yet committed)

Bug Fixes:

- Fixed City Built event
- Changed Scoreboard items (WHEOOH, Number of Cities) so that they are optional
- HotSeat
	Strategy Layer is hidden while switching players
	Civ4lerts and Reminders no longer show up while switching players
	Civ4lerts now fire for all human players
	Reminders that fired this turn no longer show in End Turn Text for next player
- Multiplayer
	Strategy Layer now saves all players' dotmaps