@@ -1,0 +1,128 @@
+## AutoSave
+##
+## Collection of saved game related utility functions.
+##
+## saveGame(type, variant)
+##   Saves the game in the directory for the given type and optional variant.
+##
+## getSaveDir(type, variant)
+##   Returns the full path of the saved games directory for the given type and optional variant.
+##
+## getSaveFileName(pathName)
+##   Returns the full path and name of the save file for the current game.
+##   Used by MapFinder and the save events.
+##
+## The idea for this and much of the code come from HOF Mod.
+##
+## Copyright (c) 2009 The BUG Mod.
+##
+## Author: Ruff_Hi, EmperorFool
+
+from CvPythonExtensions import *
+import time
+import CvUtil
+import BugCore
+import BugPath
+import MapFinder
+import PlayerUtil
+
+
+## Constants
+
+# Save Types
+
+SINGLE = "single"
+MULTI = "multi"
+PBEM = "pbem"
+HOTSEAT = "hotseat"
+PITBOSS = "pitboss"
+WORLDBUILDER = "WorldBuilder"
+
+# Save Variants
+
+AUTO = "auto"
+QUICK = "quick"
+
+
+## Globals
+
+gc = CyGlobalContext()
+options = BugCore.game.AutoSave
+
+
+## Save Game
+
+def saveGame(type=SINGLE, variant=None):
+	"""
+	Saves the current game to the folder designated by the type and optional variant.
+	
+	All in the types except WORLDBUILDER allow the AUTO variant while only SINGLE allows QUICK.
+	"""
+	(fileName, _) = getSaveFileName(getSaveDir(type, variant))
+	fileName += ".CivBeyondSwordSave"
+	gc.getGame().saveGame(fileName)
+
+def getSaveDir(type=SINGLE, variant=None):
+	if variant:
+		return BugPath.join(_saveDir, type, variant)
+	else:
+		return BugPath.join(_saveDir, type)
+
+def getSaveFileName(pathName):
+	if pathName:
+		activePlayer = PlayerUtil.getActivePlayer()
+		
+		objLeaderHead = gc.getLeaderHeadInfo (activePlayer.getLeaderType()).getText()
+		
+		game = gc.getGame()
+		map = gc.getMap()
+		
+		difficulty = gc.getHandicapInfo(activePlayer.getHandicapType()).getText()
+		mapType = map.getMapScriptName()
+		mapSize = gc.getWorldInfo(map.getWorldSize()).getText()
+		mapClimate = gc.getClimateInfo(map.getClimate()).getText()
+		mapLevel = gc.getSeaLevelInfo(map.getSeaLevel()).getText()
+		era = gc.getEraInfo(game.getStartEra()).getText()
+		speed = gc.getGameSpeedInfo(game.getGameSpeedType()).getText()
+		turnYear = CyGameTextMgr().getTimeStr(game.getGameTurn(), False)
+	
+		fileName = objLeaderHead[0:3]
+		fileName = fileName + '_' + difficulty[0:3]
+		fileName = fileName + '_' + mapSize[0:3]
+		fileName = fileName + '_' + mapType[0:3]
+		fileName = fileName + '_' + speed[0:3]
+		fileName = fileName + '_' + era[0:3]
+		fileName = fileName + '_' + turnYear.replace(" ", "-")
+		fileName = fileName + '_' + mapClimate[0:3]
+		fileName = fileName + '_' + mapLevel[0:3]
+	
+		fileName = BugPath.join(pathName, fileName)
+		baseFileName = CvUtil.convertToStr(fileName)
+		fileName = CvUtil.convertToStr(fileName + '_' + time.strftime("%b-%d-%Y_%H-%M-%S"))
+	
+		return (fileName, baseFileName)
+
+
+## AutoSave Callbacks
+
+def saveGameStart():
+	"""
+	Saves the single-player game when the map is generated as long as MapFinder isn't active.
+	"""
+	if not CyGame().isGameMultiPlayer() and options.isCreateStartSave() and not MapFinder.isActive():
+		saveGame()
+
+def saveGameEnd():
+	"""
+	Saves the single-player game when the game ends.
+	"""
+	if not CyGame().isMultiplayer() and options.isCreateEndSave():
+		saveGame()
+
+
+## Initialization
+
+_saveDir = None
+def init():
+	global _saveDir
+	_saveDir = BugPath.join(BugPath.getRootDir(), "Saves")
